--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,5 +1,4 @@
-<footer>
-    <div class="footer">
+<footer class="footer">    
 
         <a href="{{ path('profil_index') }}">
             <img src="/images/images_front/logosclair.png" alt="" class="imglogo">
@@ -16,6 +15,5 @@
         <a href="{{ path('mentions_cookies') }}" class="borderleft">
             Politique des cookies
         </a>
-
-    </div>
+  
 </footer>
