--- a/templates/mentions/cgu.html.twig
+++ b/templates/mentions/cgu.html.twig
@@ -3,102 +3,115 @@
 {% block title %}CGU{% endblock %}
 
 {% block body %}
+
+<div class="container-fluid col-10 col-lg-8 mr-auto ml-auto col-sm-6 p-0 bodyindex">
+	<div class="row">
+		<div class="col-md-12 col-lg-12 p-2 pt-3">
+			<div class="card">
+				<div class="d-flex">
+					<div class="card-body">
+                        <div class="containerMentions">
+                            <h1>Conditions générales d'utilisation</h1>
+
+                            <p><span class="soustitrementions">Conditions générales d’utilisation du site MyTeam.fr</span></p>
+
+                            <h6>Article 1 : Objet</h6>
+
+                            <p>
+                                Les présentes CGU ou Conditions Générales d’Utilisation encadrent juridiquement l’utilisation des services du site MyTeam (ci-après dénommé « le site »).
+                                Constituant le contrat entre la société MyTeam, l’Utilisateur, l’accès au site doit être précédé de l’acceptation de ces CGU. L’accès à cette plateforme signifie l’acceptation des présentes CGU.
+                            </p>
+                            <h6>Article 2 : Mentions légales</h6>
+
+                            <p>
+                                Ce site est conçu, développé et administré par l’équipe; Matthieu, Charlotte, Sam Rithy et David de l’école WebForce3 Certifiée par l’état , dont le siège est situé 18 rue Geoffroy l’Asnier, 75004 PARIS - France.
+                            </p>
+                            <p>
+                                L’hébergeur du site MyTeam.fr est la société 02switch, Siret : 510 909 807 00024 RCS Clermont Ferrand SARL au capital de 100000
+                            </p>
+
+                            <h6>Article 3 : Accès au site</h6>
+
+                            <p>
+                                Le site est accessible gratuitement depuis n’importe où par tout utilisateur disposant d’un accès à Internet. Tous les frais nécessaires pour l’accès aux services (matériel informatique, connexion Internet…) sont à la charge de l’utilisateur.
+                                L’accès aux services dédiés aux membres s’effectue à l’aide d’un email et d’un mot de passe.
+                                Pour des raisons de maintenance ou autres, l’accès au site peut être interrompu ou suspendu par l’éditeur sans préavis ni justification.
+                            </p>
+
+                            <h6>Article 4 : Collecte des données</h6>
+
+                            <p>
+                                Pour la création du compte de l’Utilisateur, la collecte des informations au moment de l’inscription sur le site est nécessaire et obligatoire. Conformément à la loi n°78-17 du 6 janvier relative à l’informatique, aux fichiers et aux libertés, la collecte et le traitement d’informations personnelles s’effectuent dans le respect de la vie privée.
+                                Suivant la loi Informatique et Libertés en date du 6 janvier 1978, articles 39 et 40, l’Utilisateur dispose du droit d’accéder, de rectifier, de supprimer et d’opposer ses données personnelles.
+                            </p>    
+
+                            <h6>Article 5 : Propriété intellectuelle</h6>
+
+                            <p>
+                                Les marques, logos ainsi que les contenus du site MyTeam.fr (illustrations graphiques, textes…) sont protégés par le Code de la propriété intellectuelle et par le droit d’auteur.
+                                La reproduction et la copie des contenus par l’Utilisateur requièrent une autorisation préalable du site. Dans ce cas, toute utilisation à des usages commerciaux ou à des fins publicitaires est proscrite.
+                            </p>
+
+                            <h6>Article 6 : Responsabilité</h6>
+
+                            <p>
+                                Bien que les informations publiées sur le site MyTeam,fr soient réputées fiables, le site se réserve la faculté d’une non-garantie de la fiabilité des sources.
+                                Les informations diffusées sur le site sont présentées à titre purement informatif et sont sans valeur contractuelle. En dépit des mises à jour régulières, la responsabilité du site ne peut être engagée en cas de modification des dispositions administratives et juridiques apparaissant après la publication. Il en est de même pour l’utilisation et l’interprétation des informations communiquées sur la plateforme.
+                                Le site décline toute responsabilité concernant les éventuels virus pouvant infecter le matériel informatique de l’Utilisateur après l’utilisation ou l’accès à ce site.
+                                Le site ne peut être tenu pour responsable en cas de force majeure ou du fait imprévisible et insurmontable d’un tiers.
+                                La garantie totale de la sécurité et la confidentialité des données n’est pas assurée par le site. Cependant, le site s’engage à mettre en œuvre toutes les méthodes requises pour le faire au mieux.
+                            </p>
+
+                            <h6>Article 7 : Liens hypertextes</h6>
+
+                            <p>
+                                Le site peut être constitué de liens hypertextes. En cliquant sur ces derniers, l’Utilisateur sortira de la plateforme. Cette dernière n’a pas de contrôle et ne peut pas être tenue responsable du contenu des pages web relatives à ces liens.
+                            </p>
+
+                            <h6>Article 8 : Cookies</h6>
+
+                            <p>
+                                Lors des visites sur le site, l’installation automatique d’un cookie sur le logiciel de navigation de l’Utilisateur peut survenir.
+                                Les cookies correspondent à de petits fichiers déposés temporairement sur le disque dur de l’ordinateur de l’Utilisateur. Ces cookies sont nécessaires pour assurer l’accessibilité et la navigation sur le site. Ces fichiers ne comportent pas d’informations personnelles et ne peuvent pas être utilisés pour l’identification d’une personne.
+                                L’information présente dans les cookies est utilisée pour améliorer les performances de navigation sur le site MyTeam,fr.
+                                En naviguant sur le site, l’Utilisateur accepte les cookies. Leur désactivation peut s’effectuer via les paramètres du logiciel de navigation.
+                            </p>
+
+                            <h6>Article 9 : Publication par l’Utilisateur</h6>
+
+                            <p>
+                                Le site MyTeam,fr permet aux membres de publier des commentaires.
+                                Dans ses publications, le membre est tenu de respecter les règles de la Netiquette ainsi que les règles de droit en vigueur.
+                                Le site dispose du droit d’exercer une modération à priori sur les publications et peut refuser leur mise en ligne sans avoir à fournir de justification.
+                                Le membre garde l’intégralité de ses droits de propriété intellectuelle. Toutefois, toute publication sur le site implique la délégation du droit non exclusif et gratuit à la société éditrice de représenter, reproduire, modifier, adapter, distribuer et diffuser la publication n’importe où et sur n’importe quel support pour la durée de la propriété intellectuelle. Cela peut se faire directement ou par l’intermédiaire d’un tiers autorisé. Cela concerne notamment le droit d’utilisation de la publication sur le web et sur les réseaux de téléphonie mobile.   
+                            </p>
+
+                            <h6>Article 10 : L'éditeur</h6>
+
+                            <p>
+                                À chaque utilisation, l’éditeur s’engage à mentionner le nom du membre à proximité de la publication.
+                                L’Utilisateur est tenu responsable de tout contenu qu’il met en ligne. L’Utilisateur s’engage à ne pas publier de contenus susceptibles de porter atteinte aux intérêts de tierces personnes. Toutes procédures engagées en justice par un tiers lésé à l’encontre du site devront être prises en charge par l’Utilisateur.
+                                La suppression ou la modification par le site du contenu de l’Utilisateur peut s’effectuer à tout moment, pour n’importe quelle raison et sans préavis.
+                            </p>
+
+                            <h6>Article 11 : Durée du contrat</h6>
+
+                            <p>
+                                Le présent contrat est valable pour une durée indéterminée. Le début de l’utilisation des services du site marque l’application du contrat à l’égard de l’Utilisateur.
+                            </p>
+
+                            <h6>Article 12 : Droit applicable et juridiction compétente</h6>
+
+                            <p>
+                                Le présent contrat est soumis à la législation française. L’absence de résolution à l’amiable des cas de litige entre les parties implique le recours aux tribunaux français compétents pour régler le contentieux.
+                            </p>
+                            
+                        </div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
     
-    <div class="containerMentions">
-        <h1>Conditions générales d'utilisation</h1>
-
-        <p><span class="soustitrementions">Conditions générales d’utilisation du site MyTeam.fr</span></p>
-
-        <h6>Article 1 : Objet</h6>
-
-        <p>
-            Les présentes CGU ou Conditions Générales d’Utilisation encadrent juridiquement l’utilisation des services du site MyTeam (ci-après dénommé « le site »).
-            Constituant le contrat entre la société MyTeam, l’Utilisateur, l’accès au site doit être précédé de l’acceptation de ces CGU. L’accès à cette plateforme signifie l’acceptation des présentes CGU.
-        </p>
-        <h6>Article 2 : Mentions légales</h6>
-
-        <p>
-            Ce site est conçu, développé et administré par l’équipe; Matthieu, charlotte, Sam Rithy et David de l’école WebForce3 Certifiée par l’état , dont le siège est situé 18 rue Geoffroy l’Asnier, 75004 PARIS - France.
-        </p>
-        <p>
-            L’hébergeur du site MyTeam.fr est la société 02switch, Siret : 510 909 807 00024 RCS Clermont Ferrand SARL au capital de 100000
-        </p>
-
-        <h6>Article 3 : Accès au site</h6>
-
-        <p>
-            Le site est accessible gratuitement depuis n’importe où par tout utilisateur disposant d’un accès à Internet. Tous les frais nécessaires pour l’accès aux services (matériel informatique, connexion Internet…) sont à la charge de l’utilisateur.
-            L’accès aux services dédiés aux membres s’effectue à l’aide d’un email et d’un mot de passe.
-            Pour des raisons de maintenance ou autres, l’accès au site peut être interrompu ou suspendu par l’éditeur sans préavis ni justification.
-        </p>
-
-        <h6>Article 4 : Collecte des données</h6>
-
-        <p>
-            Pour la création du compte de l’Utilisateur, la collecte des informations au moment de l’inscription sur le site est nécessaire et obligatoire. Conformément à la loi n°78-17 du 6 janvier relative à l’informatique, aux fichiers et aux libertés, la collecte et le traitement d’informations personnelles s’effectuent dans le respect de la vie privée.
-            Suivant la loi Informatique et Libertés en date du 6 janvier 1978, articles 39 et 40, l’Utilisateur dispose du droit d’accéder, de rectifier, de supprimer et d’opposer ses données personnelles.
-        </p>    
-
-        <h6>Article 5 : Propriété intellectuelle</h6>
-
-        <p>
-            Les marques, logos ainsi que les contenus du site MyTeam.fr (illustrations graphiques, textes…) sont protégés par le Code de la propriété intellectuelle et par le droit d’auteur.
-            La reproduction et la copie des contenus par l’Utilisateur requièrent une autorisation préalable du site. Dans ce cas, toute utilisation à des usages commerciaux ou à des fins publicitaires est proscrite.
-        </p>
-
-        <h6>Article 6 : Responsabilité</h6>
-
-        <p>
-            Bien que les informations publiées sur le site MyTeam,fr soient réputées fiables, le site se réserve la faculté d’une non-garantie de la fiabilité des sources.
-            Les informations diffusées sur le site sont présentées à titre purement informatif et sont sans valeur contractuelle. En dépit des mises à jour régulières, la responsabilité du site ne peut être engagée en cas de modification des dispositions administratives et juridiques apparaissant après la publication. Il en est de même pour l’utilisation et l’interprétation des informations communiquées sur la plateforme.
-            Le site décline toute responsabilité concernant les éventuels virus pouvant infecter le matériel informatique de l’Utilisateur après l’utilisation ou l’accès à ce site.
-            Le site ne peut être tenu pour responsable en cas de force majeure ou du fait imprévisible et insurmontable d’un tiers.
-            La garantie totale de la sécurité et la confidentialité des données n’est pas assurée par le site. Cependant, le site s’engage à mettre en œuvre toutes les méthodes requises pour le faire au mieux.
-        </p>
-
-        <h6>Article 7 : Liens hypertextes</h6>
-
-        <p>
-            Le site peut être constitué de liens hypertextes. En cliquant sur ces derniers, l’Utilisateur sortira de la plateforme. Cette dernière n’a pas de contrôle et ne peut pas être tenue responsable du contenu des pages web relatives à ces liens.
-        </p>
-
-        <h6>Article 8 : Cookies</h6>
-
-        <p>
-            Lors des visites sur le site, l’installation automatique d’un cookie sur le logiciel de navigation de l’Utilisateur peut survenir.
-            Les cookies correspondent à de petits fichiers déposés temporairement sur le disque dur de l’ordinateur de l’Utilisateur. Ces cookies sont nécessaires pour assurer l’accessibilité et la navigation sur le site. Ces fichiers ne comportent pas d’informations personnelles et ne peuvent pas être utilisés pour l’identification d’une personne.
-            L’information présente dans les cookies est utilisée pour améliorer les performances de navigation sur le site MyTeam,fr.
-            En naviguant sur le site, l’Utilisateur accepte les cookies. Leur désactivation peut s’effectuer via les paramètres du logiciel de navigation.
-        </p>
-
-        <h6>Article 9 : Publication par l’Utilisateur</h6>
-
-        <p>
-            Le site MyTeam,fr permet aux membres de publier des commentaires.
-            Dans ses publications, le membre est tenu de respecter les règles de la Netiquette ainsi que les règles de droit en vigueur.
-            Le site dispose du droit d’exercer une modération à priori sur les publications et peut refuser leur mise en ligne sans avoir à fournir de justification.
-            Le membre garde l’intégralité de ses droits de propriété intellectuelle. Toutefois, toute publication sur le site implique la délégation du droit non exclusif et gratuit à la société éditrice de représenter, reproduire, modifier, adapter, distribuer et diffuser la publication n’importe où et sur n’importe quel support pour la durée de la propriété intellectuelle. Cela peut se faire directement ou par l’intermédiaire d’un tiers autorisé. Cela concerne notamment le droit d’utilisation de la publication sur le web et sur les réseaux de téléphonie mobile.   
-        </p>
-
-        <h6>Article 10 : L'éditeur</h6>
-
-        <p>
-            À chaque utilisation, l’éditeur s’engage à mentionner le nom du membre à proximité de la publication.
-            L’Utilisateur est tenu responsable de tout contenu qu’il met en ligne. L’Utilisateur s’engage à ne pas publier de contenus susceptibles de porter atteinte aux intérêts de tierces personnes. Toutes procédures engagées en justice par un tiers lésé à l’encontre du site devront être prises en charge par l’Utilisateur.
-            La suppression ou la modification par le site du contenu de l’Utilisateur peut s’effectuer à tout moment, pour n’importe quelle raison et sans préavis.
-        </p>
-
-        <h6>Article 11 : Durée du contrat</h6>
-
-        <p>
-            Le présent contrat est valable pour une durée indéterminée. Le début de l’utilisation des services du site marque l’application du contrat à l’égard de l’Utilisateur.
-        </p>
-
-        <h6>Article 12 : Droit applicable et juridiction compétente</h6>
-
-        <p>
-            Le présent contrat est soumis à la législation française. L’absence de résolution à l’amiable des cas de litige entre les parties implique le recours aux tribunaux français compétents pour régler le contentieux.
-        </p>
-        
-    </div>
 {% endblock %}
