--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -433,6 +433,7 @@ h6{
 }
 .soustitrementions{
   color: $color4;
+}
 h6{
   color: $color4;
   border-bottom: 1px solid $color1;
@@ -446,13 +447,11 @@ footer{
   height: 80px;
   background-color: $color3;
   font-size: 10px;
-}
-.footer{
   text-align: center;
   vertical-align: middle;
   line-height: 80px;
 }
-.footer a{
+.footer > a{
   text-decoration: none;
   margin: 0 1px;
   color: $color5;
