--- a/templates/sidemenu.html.twig
+++ b/templates/sidemenu.html.twig
@@ -99,7 +99,7 @@
 				<span class="istyle">
 					<p class="m-0">
 						<i class="fas fa-angle-right"></i>
-						<a href="#">Liste des employés</ahref="#">
+						<a href="#">Liste des employés</a>
 					</p>
 					<p class="m-0">
 						<i class="fas fa-angle-right"></i>
