sidemenu fixed - documents form fixed - update profile fixed

--- a/templates/documents/_indexEmploye.html.twig
+++ b/templates/documents/_indexEmploye.html.twig
@@ -6,7 +6,7 @@
 		<div class="card">
 			<div class="flexCard">
 				<div class="card-body cardBody">
-					<h5 class="card-title">Documents envoyés</h5>
+					<h6 class="card-title">Documents envoyés</h6>
 					<p>
 						<table class="table table-bordered table-striped">
 							<thead class='thead-dark'>
@@ -38,11 +38,11 @@
 		</div>
 	</div>
 
-	<div lass="col-md-12 col-lg-12 p-2 pt-5">
+	<div class="col-md-12 col-lg-12 p-2 pt-5">
 		<div class="card">
 			<div class="flexCard">
 				<div class="card-body cardBody">
-					<h5 class="card-title">Mes documents reçus</h5>
+					<h6 class="card-title">Mes documents reçus</h6>
 					<table class="table table-bordered table-striped">
 						<thead class='thead-dark'>
 							<tr>
