--- a/templates/profil/index.html.twig
+++ b/templates/profil/index.html.twig
@@ -536,7 +536,7 @@
 				<div class="card">
 					<div class="flexCard">
 						<div class="card-body cardBody">
-							<a href="#">
+							<a href="{{ path('documents_envoyes') }}">
 								<h5 class="card-title">MES DOCUMENTS</h5>
 							</a>
 							<table class="table table-bordered table-striped">
