--- a/templates/documents/_form.html.twig
+++ b/templates/documents/_form.html.twig
@@ -10,12 +10,11 @@
                     <div class="formSize">{{ form_widget(form.name)}}</div>
                     <div class="formSize">{{ form_widget(form.type)}}</div>
                     <div class="formSize">{{ form_widget(form.destinataire)}}</div>
-                    {{ form_end(form) }}
                 </div>
             </div>
         </div>
         <div class="card-footer cardFooter">
-            <button class="btn bgc-pink rounded-pill float-right">{{ button_label|default('Envoyer') }}</button>
+            <button class="btn bgc-pink rounded-pill float-right">{{ button_label|default('Envoyer') }}{{ form_end(form) }}</button>
         </div>
     </div>
     </div>
