--- a/templates/menu.html.twig
+++ b/templates/menu.html.twig
@@ -14,9 +14,9 @@
 				<a class="dropdown text-decoration-none" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<div class="d-inline-flex align-items-center text-white">
 						{% if app.user.photo == "female" %}
-							<img src="/images/photo_profil_default/female.PNG" alt="" class="rounded-circle photoMenu"> 
+							<img src="/images/photo_profil_default/female.png" alt="" class="rounded-circle photoMenu"> 
 						{% elseif app.user.photo == "male" %}
-							<img src="/images/photo_profil_default/male.PNG" alt="" class="rounded-circle photoMenu"> 
+							<img src="/images/photo_profil_default/male.png" alt="" class="rounded-circle photoMenu"> 
 						{% else %}
 							<img src="/images/photo_profil/{{ app.user.photo }}" alt="" class="rounded-circle photoMenu"> 
 						{% endif %}
